# auraclient

./: CMakeLists.txt
include/aura/: backend-usb.h  client.h
src/: auracore.c  backend-hostdummy.c  backend-usb.c  eventqueue.c  usb-lufa.c
src/tests/: serdes.c
src/tests/templates/: serdes.inc.c
